{
    "name": "PlayerInputactions",
    "maps": [
        {
            "name": "YoungPlayer",
            "id": "815e2032-d5a9-4175-97d5-448b338a556a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7cf13671-2b18-4fbe-aad8-d0f3cd04cf91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3700c96b-37b5-495f-a229-84fe4d378328",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OldPlayer",
            "id": "15d95dda-cc98-47f7-aa2c-6c67557e567c",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "84b3704b-bf86-48dd-b4d1-eabf76f2e311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40c21744-cd32-4786-87a8-4788121eeebe",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}